# upllama

./: .gitignore  README.md  free_models.json  history.json  index.html  pyproject.toml  results.json
.github/workflows/: free-models.yml  monitor-ometer.yml  ometer-gh-pages.yml
scripts/: generate_dummy_results.py  render_results.py  test_free_models.py
sparklines/: deepseek-v4-flash_tps.html  deepseek-v4-flash_ttft.html  deepseek-v4-pro_tps.html  deepseek-v4-pro_ttft.html  gemma4_31b_tps.html  gemma4_31b_ttft.html  glm-5.1_tps.html  glm-5.1_ttft.html  kimi-k2.6_tps.html  kimi-k2.6_ttft.html  minimax-m2.5_tps.html  minimax-m2.5_ttft.html  minimax-m2.7_tps.html  minimax-m2.7_ttft.html  qwen3.5_397b_tps.html  qwen3.5_397b_ttft.html
src/ometer/: display.py
templates/: index.html.j2
tests/: test_api.py  test_cli.py  test_config.py  test_display.py
